--- a/family-in-school/FammilyInSchool.html
+++ b/family-in-school/FammilyInSchool.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#7fffd4">
 <meta charset="UTF-8">
 <title>Family in School</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -102,6 +104,23 @@ img {
   from {filter:brightness(2);}
   to {filter:brightness(1);}
 }
+/* === IMAGE FRAME LOCK === */
+.img-box{
+  width: 90%;
+  max-width: 420px;
+  aspect-ratio: 3 / 4;
+  margin: 20px auto;
+  overflow: hidden;
+  border-radius: 18px;
+  box-shadow: 0 0 30px rgba(127,255,212,.4);
+}
+
+.img-box img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 </style>
 </head>
 <body>
@@ -132,46 +151,67 @@ img {
 
 <!-- PAGE 3 -->
 <div class="page" id="p3">
+  <h2>From M.6 to M.4</h2>
+  <p style="max-width:720px;margin:auto">
+    Dear Juniors,<br><br>
+    As we reach the end of our high school journey,
+    we want you to know that every shared moment truly mattered.
+    Even if time and distance separate us,
+    memories will always stay quietly in our hearts.
+    <br><br>
+    With love and care,<br>
+    Your M.6 Seniors 💙
+  </p>
+  <button onclick="go(4)">Next</button>
+</div>
+
+
+<!-- PAGE 3 -->
+<div class="page" id="p4">
   <h2>Question 1</h2>
   <p>Do you think distance can erase memories?</p>
-  <button onclick="go(4)">No</button>
+  <button onclick="go(5)">No</button>
 </div>
 
 <!-- PAGE 4 -->
-<div class="page" id="p4">
+<div class="page" id="p5">
   <h2>Question 2</h2>
   <p>Is there a moment you want to keep forever?</p>
-  <button onclick="go(5)">Yes</button>
+  <button onclick="go(6)">Yes</button>
 </div>
 
 <!-- PAGE 5 -->
-<div class="page" id="p5">
+<div class="page" id="p6">
   <h2>Question 3</h2>
   <p>Will you really never forget us?</p>
-  <button onclick="go(6)">Never Forget</button>
+  <button onclick="go(7)">Never Forget</button>
 </div>
 
 <!-- PAGE 6 -->
-<div class="page" id="p6">
+<div class="page" id="p7">
   <h2>Leave a Message</h2>
   <textarea id="msg" placeholder="Write something from your heart..."></textarea><br>
   <button onclick="saveMessage()">Save</button>
 </div>
 
 <!-- PAGE 7 -->
-<div class="page" id="p7">
+<div class="page" id="p8">
   <h2>Our Memories</h2>
   <div id="messages"></div>
+  <div class="img-box">
   <img id="slide" src="img1.jpg">
-  <button onclick="go(8)">Next</button>
+</div>
+  <button onclick="go(9)">Next</button>
 </div>
 
+
 <!-- PAGE 8 -->
-<div class="page" id="p8">
+<div class="page" id="p9">
   <h2>M.6 Seniors and M.4 Juniors</h2>
   <div class="list">
     • Phuwadin Chuenarrom<br>
     • Thakdanai Nopmak<br>
+    • Chesadaphong Baramisathit<br>
     • Nichakan Taosomta<br>
     • Manantita Namsom<br>
     • Suwicha Maneesri<br>
@@ -182,15 +222,12 @@ img {
     • Kanyacha Sathipphati
   </div>
 
-  <h3>Scan to Remember</h3>
-  <img id="qr">
-</div>
-
 <script>
 /* DATA */
 const family = [
  "Phuwadin Chuenarrom — Brother",
  "Thakdanai Nopmak — Brother",
+ "Chesadaphong Baramisathit",
  "Nichakan Taosomta — Sister",
  "Manantita Namsom — Sister",
  "Suwicha Maneesri — Sister",
@@ -201,8 +238,15 @@ const family = [
  "Kanyacha Sathipphati — Sister"
 ];
 
-const images = ["img1.jpg","img2.jpg","img3.jpg"];
-let idx=0;
+let images = ["img1.jpg","img2.jpg","img3.jpg","img4.jpg","img5.jpg","img6.jpg","img7.jpg","img8.jpg","img9.jpg"];
+let shuffled = [];
+
+function getRandomImage(){
+  if(shuffled.length === 0){
+    shuffled = [...images].sort(() => Math.random() - 0.5);
+  }
+  return shuffled.pop();
+}
 
 /* START */
 function start(){
@@ -230,19 +274,23 @@ function showMessages(){
   const arr = JSON.parse(localStorage.getItem("msgs")||"[]");
   messages.innerHTML = arr.map(m=>"💬 "+m).join("<br><br>");
 }
+function clearMessages(){
+  localStorage.removeItem("msgs");
+  messages.innerHTML = "";
+}
+
+
+
 
 /* SLIDESHOW */
 setInterval(()=>{
-  const img=document.getElementById("slide");
+  const img = document.getElementById("slide");
   if(!img) return;
-  idx=(idx+1)%images.length;
-  img.src=images[idx];
+
+  img.src = getRandomImage();
   img.classList.add("flash");
   setTimeout(()=>img.classList.remove("flash"),400);
 },4000);
-
-/* QR */
-qr.src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data="+encodeURIComponent(location.href);
 
 /* PARTICLES */
 const c=dust,ctx=c.getContext("2d");
