--- a/family-in-school/index.html
+++ b/family-in-school/index.html
@@ -227,7 +227,7 @@ img {
 const family = [
  "Phuwadin Chuenarrom — Brother",
  "Thakdanai Nopmak — Brother",
- "Chesadaphong Baramisathit",
+ "Chesadaphong Baramisathit — Brother",
  "Nichakan Taosomta — Sister",
  "Manantita Namsom — Sister",
  "Suwicha Maneesri — Sister",
@@ -308,3 +308,4 @@ const ps=[...Array(80)].map(()=>({x:Math.random()*c.width,y:Math.random()*c.heig
 </script>
 </body>
 </html>
+
